# hantek-365

./: README.md  hantek365.pl
hantek365_gui/: CMakeLists.txt  hantekdevice.cpp  hantekdevice.h  main.cpp  mainwindow.cpp  mainwindow.h
